--- a/_posts/2024-07-15-jp2970.md
+++ b/_posts/2024-07-15-jp2970.md
@@ -1,4 +1,5 @@
 ---
+permalink: /jp2970/
 layout: post
 title: Erkundung des Tracciolino Wegs Teil 2 w/ Stephi & Lennox
 date: 2024-07-15 15:30:00 +0200
